--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,6 @@
+auxiliary.org-netbeans-modules-javascript2-requirejs.enabled=true
 file.reference.HTML5_avanc_-JeremieEscape=.
 files.encoding=UTF-8
 site.root.folder=${file.reference.HTML5_avanc_-JeremieEscape}
+start.file=index2.html
+web.context.root=/JeremieEscape
